--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,3 +9,94 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+*{
+  font-family: 'Roboto', sans-serif;
+}
+
+
+h1, h3, h4, p{
+  color: white
+}
+
+
+
+body{
+  background-color: #333333
+} 
+
+
+.btn-dark{
+  border-radius: 30px;
+  background-color: #15A15C
+}
+
+/*  Navbar */
+.Navbar{
+  background-color:#1B1C1F
+}  
+
+.logo{
+  height: 35px;
+}
+
+ a{
+    color: #F9F9FF;
+    font-size: 20px;
+    text-decoration: none;
+    background-color: transparent;
+}    
+
+.margin-navbar {
+  margin-top: 100px;
+}  
+
+
+
+.movie-card-border{
+  border: #18B869, 2px, solid;
+}
+
+
+/*  Filters */
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #18B869;
+    background-clip: padding-box;
+    border: 1px solid #18B869;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+/*  Movie details */
+
+
+.movie-details-img {
+  height: 500px;
+}
+
+.lists-btn{
+  justify-content: space-around;
+  margin-top: 20px;
+  padding-right: 30px;
+}
+.anchorNav:hover {
+  color:#18B869;
+  text-decoration-line: none
+}
+
+/*  Slider */
+
+/* .btn-slider{
+  margin: 10px, 10px;
+} */
